--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,31 +1,63 @@
 .friendMessage {
-
+    font-family: 'Montserrat', sans-serif;
+    margin-bottom: 30px;
 }
 
 .friendImageAndText {
-
+    display: flex;
+    align-items: end;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
 }
 
 .friendText {
-
+    display: inline-block;
+    background: rgba(245, 247, 251, 1);
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1);
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    margin-left: 10px;
 }
 
 .friendText:after {
-
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -10px;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid rgba(245, 247, 251, 1);
 }
 
 .friendName {
-
+    color: rgba(0, 0, 0, 1);
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0;
+    text-align: left;
 }
 
 .friendMessageText {
-
+    color: rgba(0, 0, 0, 1);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0;
+    text-align: left;
 }
 
 .friendTime {
-
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 12px;
+    letter-spacing: 0;
+    text-align: start;
+    margin-top: 5px;
+    margin-left: 10px;
 }
