--- a/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
+++ b/src/s2-homeworks/hw01/message-sender/MessageSender.module.css
@@ -32,6 +32,7 @@
     background: rgba(255, 255, 255, 1);
     border: 2px solid rgba(0, 102, 204, 1);
     color: rgba(0, 102, 204, 1);
+    cursor: pointer;
 }
 
 .button:active {
