--- a/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
+++ b/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
@@ -10,9 +10,10 @@
 .name {
     display: flex;
     align-items: center;
-    justify-content: center;
     width: 145px;
     height: 37px;
+    padding: 10px;
+    font-weight: 500;
 }
 
 .closeButton {
