--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -2,34 +2,94 @@
 }
 
 .inputAndButtonContainer {
+    display: flex;
+    gap: 12px;
+    margin-top: 10px;
 }
 
 .error {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0;
+    text-align: left;
+    color: rgba(204, 0, 0, 1);
+    margin-top: 10px;
 }
 
 .input {
+    width: 372px;
+    height: 36px;
+    padding-left: 12px;
+    border-radius: 5px;
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0;
+    text-align: left;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 1);
 }
 
 .input:focus {
+
 }
 
 .errorInput {
+    width: 372px;
+    height: 36px;
+    border: 1px solid red;
+    border-radius: 5px;
 }
 
 .button {
+    width: 78px;
+    height: 36px;
+    padding: 5px 24px 5px 24px;
+    border-radius: 5px;
+    background: rgba(0, 102, 204, 1);
+    color: rgba(255, 255, 255, 1);
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0;
+    text-align: left;
+    border: none;
+    cursor: pointer;
 }
 
 .button:focus {
+    color: rgba(0, 102, 204, 1);
+    background: rgba(255, 255, 255, 1);
+    border: 2px solid rgba(0, 102, 204, 1);
 }
 
 .button:active {
 }
 
 .button:disabled {
+    opacity: 0.5;
 }
 
 .text {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .greeting {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    letter-spacing: 0;
+    text-align: left;
+    color: rgba(0, 0, 0, 1);
 }
