--- a/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/s2-homeworks/hw04/common/c1-SuperInputText/SuperInputText.module.css
@@ -2,19 +2,31 @@
 }
 
 .input {
+    width: 372px;
+    height: 36px;
+    border-radius: 5px;
+    border: 1px solid rgba(209, 209, 209, 1);
 }
 
 .inputWrapper {
+    position: relative;
 }
 
 .superInput {
 }
 
 .errorInput {
+    outline: 1px solid rgba(204, 20, 57, 1);
 }
 
 .errorInput:focus {
+    outline: 1px solid rgba(204, 20, 57, 1);
 }
 
 .error {
+    color: rgba(204, 20, 57, 1);
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+
 }
