--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,25 +1,64 @@
 .sidebar {
+    height: 100%;
+    width: 300px;
+    background-color: #fff;
+    position: absolute;
+    z-index: 2;
+    display: none;
 }
 
 .sidebar.open {
+    display: block;
 }
 
 .background {
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+    position: absolute;
+    z-index: 1;
 }
 
 .nav {
+    padding: 60px 0 0 60px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: start;
 }
 
 .nav a {
+    color: #000;
+    font-family: Montserrat, sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-decoration: none;
 }
 
 .nav a:hover {
+    color: #58ACFF;
 }
 
+
 .nav a.active {
+    color: #0059B2;
+    text-decoration-line: underline;
 }
+
 .close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    border: none;
+    background-color: #fff;
 }
 
 .close img {
+    margin: 10px;
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
 }
