--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -11,7 +11,11 @@
     padding: 10px 70px 10px;
     border-bottom: 1px solid rgba(217, 217, 217, 1);
     box-shadow: 0 0 2px 0 rgba(29, 33, 38, 0.10), 0 0 40px 0 rgba(29, 33, 38, 0.13);
-
+    position: fixed;
+    width: 100%;
+    top: 0;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 3;
 }
 
 .header h1 {
