--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,11 +1,34 @@
 .spanBlock {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin: 5px 0 20px;
 }
 
 .span {
+    color: #0080FF;
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-left: 15px;
 }
 
 .input {
+    display: flex;
+    width: 276px;
+    height: 36px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-color: rgba(209, 209, 209, 1);
+    padding-left: 20px;
+    margin: 5px 0 20px;
 }
 
 .pen {
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
 }
