--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,4 +1,15 @@
 .select {
+    width: 165px;
+    height: 24px;
+    flex-shrink: 0;
+    border-radius: 2px;
+    border: 1px solid #C2C2C2;
+    color: #000;
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .select:focus {
