--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 300px;
     background-color: #fff;
-    position: absolute;
+    position: fixed;
     z-index: 2;
     display: none;
 }
@@ -15,7 +15,7 @@
     height: 100vh;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.3);
-    position: absolute;
+    position: fixed;
     z-index: 1;
 }
 
