--- a/src/s2-homeworks/hw08/HW8.module.css
+++ b/src/s2-homeworks/hw08/HW8.module.css
@@ -1,23 +1,53 @@
 .item {
+    color: #000;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    border-bottom: 1px solid #E5E5E5;
 }
 
 .item:last-of-type {
+    border: none;
 }
 
 .users {
 }
 
 .buttonsContainer {
+    display: flex;
+    justify-content: end;
+    gap: 10px;
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+    gap: 15px;
+    table {
+        border-collapse: collapse;
+    }
 }
 
 .thead {
+    color: #000;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    background-color: #E5E5E5;
 }
 
 .nameCol {
+    width: 50%;
+    height: 36px;
+    padding-left: 15px;
 }
 
 .ageCol {
+    width: 50%;
+    height: 36px;
 }
