--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -7,7 +7,7 @@
     font-weight: 600;
     line-height: 20px;
     letter-spacing: 0;
-
+    cursor: pointer;
 }
 
 .disabled {
@@ -36,33 +36,33 @@
 
 .default:hover {
     background: rgba(0, 128, 255, 1);
-    width: 167px;
+    /*width: 167px;*/
 }
 
 .red:hover {
     background: rgba(255, 26, 71, 1);
-    width: 167px;
+    /*width: 167px;*/
 }
 
 .secondary:hover {
     background: rgba(229, 240, 250, 1);
-    width: 167px;
+    /*width: 167px;*/
 }
 
 
 .default:active {
     background: rgba(0, 89, 178, 1);
-    width: 149px;
+    /*width: 149px;*/
 }
 
 .secondary:active {
     background: rgba(201, 229, 255, 1);
-    width: 149px;
+    /*width: 149px;*/
 }
 
 .red:active {
     background: rgba(178, 18, 50, 1);
-    width: 149px;
+    /*width: 149px;*/
 }
 
 .button:disabled {
