--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -4,7 +4,7 @@
 }
 
 .hw {
-    width: 100%;
+    height: 100vh;
     padding: 24px 70px 24px;
     border-bottom: 1px solid rgba(217, 217, 217, 1);
 }
