--- a/src/s2-homeworks/hw10/Loader.module.css
+++ b/src/s2-homeworks/hw10/Loader.module.css
@@ -1,3 +1,33 @@
 .loader {
-    /*свг и/или анимация*/
+
+    .spinner {
+        animation: rotate 2s linear infinite;
+        width: 100px;
+        height: 100px;
+
+        .path {
+            stroke-linecap: round;
+            animation: dash 1.5s ease-in-out infinite;
+            stroke: hsla(264, 48%, 39%, 0.57);
+        }
+    }
+}
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes dash {
+    0% {
+        stroke-dasharray: 1, 150;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -35;
+    }
+    100% {
+        stroke-dasharray: 90, 150;
+        stroke-dashoffset: -124;
+    }
 }
